--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,11 +1,11 @@
 # Authors
 
 Name Name:
-  author        : "Tereza Sásková"
+  author        : "Jan Sáska"
   author_profile: true
-  uri         : "https://tercasaskova311.github.io/portfolio/"
-  email       : "tercasaskova311@gmail.com"
-  bio         : "My name is Tereza Sásková. I am a Data Science student. Passionate mountain biker and outdoor enthusianst."
-  avatar      : "images/profile.jpg"
+  uri         : "https://jansaska.github.io/portfolio/"
+  email       : "saskahonza@gmail.com"
+  bio         : "My name is Jan Sáska. I am a professional mountainbiker. I am first year elite xco MTB racer. Currently Czech national champion in XCO."
+  avatar      : "/images/DSC05016.jpeg"
 
 
