--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@ main:
   - title: "About"
     url: /about/
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Racing"
+    url: /racing/
 
   
   - title: "Gallery"
