--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 Name Name:
   author        : "Jan Sáska"
   author_profile: true
-  uri         : "https://jansaska.github.io/portfolio/"
+  uri         : "https://tercasaskova311.github.io/jansaska/"
   email       : "saskahonza@gmail.com"
   bio         : "My name is Jan Sáska. I am a professional mountainbiker. I am first year elite xco MTB racer. Currently Czech national champion in XCO."
   avatar      : "/images/DSC05016.jpeg"
