--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "Collaboration"
     url: /collaboration/   # or /cv-json/ if you're using the JSON-based version
 
-  - title: "Blog"
-    url: /blog/
+  - title: "Photography"
+    url: /photography/
 
   - title: "Contact"
     url: /contact/  # You can create a simple contact.md or mailto link
