--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 title: "Home"
 masthead_title: "Home"
 url: "https://tercasaskova311.github.io"   # keep this as the user site root
-baseurl: "/jansaska"                       # project site path (repo name = jansaska)
+baseurl: "/jansaska" 
+languages: ["en", "cze"]
+default_lang: "cze"                     # project site path (repo name = jansaska)
 repository: "tercasaskova311/jansaska"
 minimal_mistakes_skin: "yellow"            # ensure you added _sass/.../yellow.scss
 
